--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <title>test</title>
-</head>
-<body>
-    <h1>Hey :D</h1>
-    <p>Test Website</p>
-</body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
+    <link rel="stylesheet" href="css/styels.css">
+    </head>
+    <body>
+        <header class="header">
+            <h1>Hey Iam Ahmed (LuckyVii)</h1>
+            <p>Iam junior Web Developer and that's my first Test Website for me I hope I do my best later</p>
+        </header>
+        <ul class="topnav">
+            <li><a href="https://www.facebook.com/luckYViiii" target="_blank">Facebook</a></li>
+            <li><a href="https://t.me/LuckyVii" target="_blank">Telegram</a></li>
+            <li><a href="https://github.com/luckYViii" target="_blank">Github</a></li>
+        </ul>
+    </body>
 </html>
