Initial New Design

--- a/index.html
+++ b/index.html
@@ -1,20 +1,347 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <link rel="stylesheet" href="css/styels.css">
-    </head>
-    <body>
-        <header class="header">
-            <h1>Hey Iam Ahmed (LuckyVii)</h1>
-            <p>Iam junior Web Developer and that's my first Test Website for me I hope I do my best later</p>
-        </header>
-        <ul class="topnav">
-            <li><a href="https://www.facebook.com/luckYViiii" target="_blank">Facebook</a></li>
-            <li><a href="https://t.me/LuckyVii" target="_blank">Telegram</a></li>
-            <li><a href="https://github.com/luckYViii" target="_blank">Github</a></li>
-        </ul>
-    </body>
+
+    <!-- custom file Style -->
+    <link rel="stylesheet" href="assets/css/styels.css">
+
+    <!-- Normalize -->
+    <link rel="stylesheet" href="assets/css/normalize.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="assets/css/all.min.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;400;600&display=swap" rel="stylesheet">
+
+    <!-- Title -->
+    <title>personal-ahmed</title>
+
+    <!-- Title Icon -->
+    <link rel="icon" href="assets/img/title-icon.png">
+</head>
+
+<body>
+
+    <!-- Start spinner wrapper -->
+    <div class='spinner-wrapper'>
+        <div class="spinner"></div>
+    </div>
+    <!-- End spinner wrapper -->
+
+    <!-- Start Header -->
+    <header>
+        <div id="menu-bar" class="fa-solid fa-bars-staggered"></div>
+
+        <nav class="nav-bar">
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#services">services</a>
+            <a href="#portfolio">portfolio</a>
+            <a href="#blogs">blogs</a>
+            <a href="#contact">contact</a>
+            <a href="#social">social</a>
+        </nav>
+    </header>
+    <!-- End Header -->
+
+    <!-- Start Home  -->
+    <section class="home" id="home">
+        <div id="particles-js"></div>
+        <div class="content">
+            <img class="tilt" src="assets/img/home-pic.png">
+            <h3> <span> ahmed </span> hassan </h3>
+            <p>i am a <span class="typing-text">front end developer</span></p>
+            <a href="#about" class="btn">about me</a>
+        </div>
+    </section>
+    <!-- End Home  -->
+
+    <!-- Start About -->
+    <section class="about" id="about">
+        <h1 class="heading"> <span> about </span> me </h1>
+
+        <div class="row">
+            <div class="img">
+                <img src="assets/img/about-pic.png">
+            </div>
+            <div class="content">
+                <h3><span>my name is </span> ahmed hassan</h3>
+                <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum sunt a vel?
+                    Repellat, magnam reprehenderit? Eius deserunt eligendi laboriosam? Ut dolore minus sed
+                    exercitationem dolorem ab accusantium autem voluptate!</p>
+                <div class="box-container">
+                    <div class="box">
+                        <p><span> age: </span>25</p>
+                        <p><span> gender: </span>male</p>
+                        <p><span> experience: </span>1 year</p>
+                        <p><span> freelance: </span>available</p>
+                    </div>
+                    <div class="box">
+                        <p><span> language: </span>arabic / english</p>
+                        <p><span> phone: </span>+201011674195</p>
+                        <p><span> email: </span>ah440099@gmail.com</p>
+                        <p><span> address: </span>Dakahlia, Egypt - 35519</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card tilt">
+            <h2> <span> Development </span> Skills</h2>
+            <p class="skill html">
+                <span>HTML</span>
+                <span class="level">100%</span>
+            </p>
+            <p class="skill css">
+                <span>CSS</span>
+                <span class="level">80%</span>
+            </p>
+            <p class="skill javascript">
+                <span>JavaScript</span>
+                <span class="level">60%</span>
+            </p>
+            <p class="skill c">
+                <span>c / c++</span>
+                <span class="level">50%</span>
+            </p>
+            <p class="skill python">
+                <span>python</span>
+                <span class="level">30%</span>
+            </p>
+        </div>
+    </section>
+    <!-- End About -->
+
+    <!-- Start Service -->
+    <section class="services" id="services">
+        <h1 class="heading"><span> my </span> services </h1>
+        <div class="box-container">
+            <div class="box tilt">
+                <i class="fas fa-code"></i>
+                <h3>web development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+            <div class="box tilt">
+                <i class="fas fa-paint-brush"></i>
+                <h3>UI UX designer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+            <div class="box tilt">
+                <i class="fas fa-bullhorn"></i>
+                <h3>seo marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+            <div class="box tilt">
+                <i class="fas fa-envelope"></i>
+                <h3>email marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+            <div class="box tilt">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>responsive designs</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+            <div class="box tilt">
+                <i class="fab fa-wordpress"></i>
+                <h3>wordpress</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
+                    inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
+                    provident. Deserunt, fugiat omnis.</p>
+            </div>
+        </div>
+    </section>
+    <!-- End Service -->
+    <!-- Start Portfolio -->
+    <section class="portfolio" id="portfolio">
+        <h1 class="heading"><span> my </span> portfolio </h1>
+        <div class="box-container">
+            <div class="box tilt">
+                <img src="assets/img/img-1.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/img-2.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/img-3.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/img-4.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/img-5.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/img-6.jpg" alt="">
+                <div class="content">
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Portfolio -->
+    <!-- Start Blogs -->
+    <section class="blogs" id="blogs">
+        <h1 class="heading"><span> my </span> blogs </h1>
+        <div class="box-container">
+            <div class="box tilt">
+                <img src="assets/img/blog-img-1.jpg" alt="">
+                <h3>blogs title goes here</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
+                    corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
+                    eaque dolorem? Cum, dolor!</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/blog-img-2.jpg" alt="">
+                <h3>blogs title goes here</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
+                    corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
+                    eaque dolorem? Cum, dolor!</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+            <div class="box tilt">
+                <img src="assets/img/blog-img-3.jpg" alt="">
+                <h3>blogs title goes here</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
+                    corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
+                    eaque dolorem? Cum, dolor!</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+    </section>
+    <!-- End Blogs -->
+
+    <!-- Start contact -->
+    <div class="contact" id="contact">
+        <h1 class="heading"><span> my </span> contact </h1>
+        <div class="row">
+            <div class="img">
+                <img class="tilt" src="assets/img/contact-img.svg">
+            </div>
+
+            <form action="">
+                <div class="input-box">
+                    <input type="text" placeholder="name">
+                    <input type="email" placeholder="email">
+                </div>
+
+                <input type="text" placeholder="" class="box">
+
+                <textarea placeholder="message" name="" id="" rows="30" cols="10"></textarea>
+
+                <input type="submit" class="btn" value="send message">
+            </form>
+        </div>
+    </div>
+    <!-- End contact -->
+
+    <!-- Start Footer -->
+    <footer id="social">
+        <div class="footer-content">
+            <h3 class="heading"><span> social </span> links </h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis fugiat perferendis est natus
+                necessitatibus, vel tempora a quia voluptatibus dolore, dignissimos exercitationem obcaecati? At ex
+                dolore quaerat laboriosam officiis dolores.</p>
+            <ul class="social-links">
+                <li><a href="https://www.facebook.com/luckYViiii" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://mobile.twitter.com/LckyVii" target="_blank"><i
+                            class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://t.me/LuckyVii" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ahmed-hassan-881163225/" target="_blank"><i
+                            class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/luckYViii" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>Coded by <span> ahmed hassan </span> | all rights reserved! </p>
+        </div>
+    </footer>
+    <!-- End Footer -->
+
+    <!-- Start JavaScript -->
+
+    <!-- Typed Script -->
+    <script src="assets/js/typed.min.js"></script>
+
+    <!-- particles JavaScript -->
+    <script src="assets/js/particles.min.js"></script>
+    <script src="assets/js/app.js"></script>
+
+    <!-- vanilla Tilt -->
+    <script src="assets/js/vanilla-tilt.min.js"></script>
+
+    <script>
+
+        // Menu
+        let menu = document.querySelector('#menu-bar');
+
+        // Header
+        let header = document.querySelector('header');
+
+        // // Menu
+        menu.onclick = () => {
+            menu.classList.toggle('fa-xmark');
+            header.classList.toggle('active');
+        };
+
+        window.onscroll = () => {
+            menu.classList.remove('fa-xmark');
+            header.classList.remove('active');
+        };
+
+        // Type Script
+        var typed = new Typed('.typing-text', {
+            strings: ['front end developer', 'UI UX designer', 'web developer', 'freelancer'],
+            loop: true,
+            typeSpeed: 150
+        });
+
+        // Vanilla Tilt
+        VanillaTilt.init(document.querySelectorAll('.tilt'), {
+            max: 25
+        });
+
+        // spinner-Wrapper
+        let spinnerWrapper = document.querySelector('.spinner-wrapper');
+
+        window.addEventListener('load', function () {
+            // spinnerWrapper.style.display = 'none';
+            spinnerWrapper.parentElement.removeChild(spinnerWrapper);
+        });
+    </script>
+</body>
+
 </html>
