improve user experience

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Meta Information -->
+    <meta name="description" content="Portfolio Ahmed luckYVii">
+    <meta name="keywords" content="ahmed luckYVii">
+    <meta name="author" content="Ahmed Hassan">
+
     <!-- custom file Style -->
-    <link rel="stylesheet" href="assets/css/styels.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
 
     <!-- Normalize -->
     <link rel="stylesheet" href="assets/css/normalize.css">
@@ -21,20 +26,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;400;600&display=swap" rel="stylesheet">
 
     <!-- Title -->
-    <title>personal-ahmed</title>
+    <title>Portfolio Ahmed hassan</title>
 
-    <!-- Title Icon -->
-    <link rel="icon" href="assets/img/title-icon.png">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" >
+    <link rel="icon" href="assets/img/favicon.ico">
+
+    <!-- Apple touch icon -->
+    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
 </head>
 
 <body>
-
-    <!-- Start spinner wrapper -->
-    <div class='spinner-wrapper'>
-        <div class="spinner"></div>
-    </div>
-    <!-- End spinner wrapper -->
-
     <!-- Start Header -->
     <header>
         <div id="menu-bar" class="fa-solid fa-bars-staggered"></div>
@@ -55,8 +57,8 @@
     <section class="home" id="home">
         <div id="particles-js"></div>
         <div class="content">
-            <img class="tilt" src="assets/img/home-pic.png">
-            <h3> <span> ahmed </span> hassan </h3>
+            <img class="tilt" src="assets/img/home-pic.webp" alt="home">
+            <h1> <span> ahmed </span> hassan </h1>
             <p>i am a <span class="typing-text">front end developer</span></p>
             <a href="#about" class="btn">about me</a>
         </div>
@@ -69,10 +71,10 @@
 
         <div class="row">
             <div class="img">
-                <img src="assets/img/about-pic.png">
+                <img src="assets/img/about-pic.webp" alt="about">
             </div>
             <div class="content">
-                <h3><span>my name is </span> ahmed hassan</h3>
+                <h2><span>my name is </span> ahmed hassan</h2>
                 <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum sunt a vel?
                     Repellat, magnam reprehenderit? Eius deserunt eligendi laboriosam? Ut dolore minus sed
                     exercitationem dolorem ab accusantium autem voluptate!</p>
@@ -93,7 +95,7 @@
             </div>
         </div>
         <div class="card tilt">
-            <h2> <span> Development </span> Skills</h2>
+            <h1> <span> Development </span> Skills</h1>
             <p class="skill html">
                 <span>HTML</span>
                 <span class="level">100%</span>
@@ -124,21 +126,21 @@
         <div class="box-container">
             <div class="box tilt">
                 <i class="fas fa-code"></i>
-                <h3>web development</h3>
+                <h2>web development</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
                     inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
                     provident. Deserunt, fugiat omnis.</p>
             </div>
             <div class="box tilt">
                 <i class="fas fa-paint-brush"></i>
-                <h3>UI UX designer</h3>
+                <h2>UI UX designer</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
                     inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
                     provident. Deserunt, fugiat omnis.</p>
             </div>
             <div class="box tilt">
                 <i class="fas fa-bullhorn"></i>
-                <h3>seo marketing</h3>
+                <h2>seo marketing</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ea magnam? Perspiciatis pariatur
                     inventore porro quaerat? Dolor corporis suscipit quasi ipsum voluptas quae neque, aperiam nemo
                     provident. Deserunt, fugiat omnis.</p>
@@ -172,37 +174,37 @@
         <h1 class="heading"><span> my </span> portfolio </h1>
         <div class="box-container">
             <div class="box tilt">
-                <img src="assets/img/img-1.jpg" alt="">
+                <img src="assets/img/img-1.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
             </div>
             <div class="box tilt">
-                <img src="assets/img/img-2.jpg" alt="">
+                <img src="assets/img/img-2.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
             </div>
             <div class="box tilt">
-                <img src="assets/img/img-3.jpg" alt="">
+                <img src="assets/img/img-3.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
             </div>
             <div class="box tilt">
-                <img src="assets/img/img-4.jpg" alt="">
+                <img src="assets/img/img-4.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
             </div>
             <div class="box tilt">
-                <img src="assets/img/img-5.jpg" alt="">
+                <img src="assets/img/img-5.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
             </div>
             <div class="box tilt">
-                <img src="assets/img/img-6.jpg" alt="">
+                <img src="assets/img/img-6.webp" alt="portfolio">
                 <div class="content">
                     <a href="#" class="btn">learn more</a>
                 </div>
@@ -215,24 +217,24 @@
         <h1 class="heading"><span> my </span> blogs </h1>
         <div class="box-container">
             <div class="box tilt">
-                <img src="assets/img/blog-img-1.jpg" alt="">
-                <h3>blogs title goes here</h3>
+                <img src="assets/img/blog-img-1.webp" alt="blog">
+                <h2>blogs title goes here</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
                     corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
                     eaque dolorem? Cum, dolor!</p>
                 <a href="#" class="btn">learn more</a>
             </div>
             <div class="box tilt">
-                <img src="assets/img/blog-img-2.jpg" alt="">
-                <h3>blogs title goes here</h3>
+                <img src="assets/img/blog-img-2.webp" alt="blog">
+                <h2>blogs title goes here</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
                     corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
                     eaque dolorem? Cum, dolor!</p>
                 <a href="#" class="btn">learn more</a>
             </div>
             <div class="box tilt">
-                <img src="assets/img/blog-img-3.jpg" alt="">
-                <h3>blogs title goes here</h3>
+                <img src="assets/img/blog-img-3.webp" alt="blog">
+                <h2>blogs title goes here</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt soluta, debitis at minus
                     corporis quidem aperiam quisquam animi repudiandae, veritatis ut eligendi hic aliquam asperiores
                     eaque dolorem? Cum, dolor!</p>
@@ -247,16 +249,16 @@
         <h1 class="heading"><span> my </span> contact </h1>
         <div class="row">
             <div class="img">
-                <img class="tilt" src="assets/img/contact-img.svg">
+                <img class="tilt" src="assets/img/contact-img.svg" alt="contact">
             </div>
 
             <form action="">
                 <div class="input-box">
-                    <input type="text" placeholder="name">
-                    <input type="email" placeholder="email">
+                    <input id="name" type="text" placeholder="name">
+                    <input id="email" type="email" placeholder="email">
                 </div>
 
-                <input type="text" placeholder="" class="box">
+                <input type="text" placeholder="subject" class="box">
 
                 <textarea placeholder="message" name="" id="" rows="30" cols="10"></textarea>
 
@@ -269,19 +271,22 @@
     <!-- Start Footer -->
     <footer id="social">
         <div class="footer-content">
-            <h3 class="heading"><span> social </span> links </h3>
+            <h1 class="heading"><span> social </span> links </h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis fugiat perferendis est natus
                 necessitatibus, vel tempora a quia voluptatibus dolore, dignissimos exercitationem obcaecati? At ex
                 dolore quaerat laboriosam officiis dolores.</p>
             <ul class="social-links">
-                <li><a href="https://www.facebook.com/luckYViiii" target="_blank"><i
-                            class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://mobile.twitter.com/LckyVii" target="_blank"><i
-                            class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="https://t.me/LuckyVii" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/ahmed-hassan-881163225/" target="_blank"><i
+                <li><a title="https://www.facebook.com/luckYViiii" href="https://www.facebook.com/luckYViiii"
+                        target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a title="https://mobile.twitter.com/LckyVii" href="https://mobile.twitter.com/LckyVii"
+                        target="_blank" rel="noopener"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a title="https://t.me/LuckyVii" href="https://t.me/LuckyVii" target="_blank" rel="noopener"><i
+                            class="fa-brands fa-telegram"></i></a></li>
+                <li><a title="https://www.linkedin.com/in/ahmed-hassan-881163225/"
+                        href="https://www.linkedin.com/in/ahmed-hassan-881163225/" target="_blank" rel="noopener"><i
                             class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/luckYViii" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <li><a title="https://github.com/luckYViii" href="https://github.com/luckYViii" target="_blank"
+                        rel="noopener"><i class="fa-brands fa-github"></i></a>
                 </li>
             </ul>
         </div>
@@ -332,14 +337,6 @@
         // Vanilla Tilt
         VanillaTilt.init(document.querySelectorAll('.tilt'), {
             max: 25
-        });
-
-        // spinner-Wrapper
-        let spinnerWrapper = document.querySelector('.spinner-wrapper');
-
-        window.addEventListener('load', function () {
-            // spinnerWrapper.style.display = 'none';
-            spinnerWrapper.parentElement.removeChild(spinnerWrapper);
         });
     </script>
 </body>
