Added link to new website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Portfolio Ahmed hassan</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" >
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="icon" href="assets/img/favicon.ico">
 
     <!-- Apple touch icon -->
@@ -90,6 +90,9 @@
                         <p><span> phone: </span>+201011674195</p>
                         <p><span> email: </span>ah440099@gmail.com</p>
                         <p><span> address: </span>Dakahlia, Egypt - 35519</p>
+                        <p><span>New Website: <a
+                                    href="https://63c2e6f2a96e932d69fdfd17--blueexoo-portfolio.netlify.app/">Visit our
+                                    new website</a></span></p>
                     </div>
                 </div>
             </div>
